--- a/input.css
+++ b/input.css
@@ -14,3 +14,10 @@
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+.player {
+  background: rgba(16, 16, 16, 0.1);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(4.9px);
+  -webkit-backdrop-filter: blur(4.9px);
+  border: 1px solid rgba(255, 255, 255, 0.05);
+}
